<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SongsViewFragment"
    android:background="@color/colorPrimary">

    <FrameLayout
        android:id="@+id/aboutAlbumsAndSongs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/aboutAlbumsFrameHeight"
        app:layout_constraintBottom_toTopOf="@+id/controlFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewCollectionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/collectionName"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.731"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.114" />

            <TextView
                android:id="@+id/textViewArtistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/artistName"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.664"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCollectionName"
                app:layout_constraintVertical_bias="0.117" />

            <TextView
                android:id="@+id/textViewGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/genres"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.603"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewArtistName"
                app:layout_constraintVertical_bias="0.106" />

            <TextView
                android:id="@+id/textViewCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/countryName"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.695"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGenre"
                app:layout_constraintVertical_bias="0.153" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/albumsPrice"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.596"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCountry"
                app:layout_constraintVertical_bias="0.06" />

            <TextView
                android:id="@+id/textViewDateRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dateRelease"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.678"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPrice"
                app:layout_constraintVertical_bias="0.082" />

            <ImageView
                android:id="@+id/imageViewAlbums"
                android:layout_width="@dimen/imageViewSize"
                android:layout_height="@dimen/imageViewSize"
                android:contentDescription="@string/contentDescriptionImage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewArtistName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.234"
                app:srcCompat="?attr/selectableItemBackground" />

            <TextView
                android:id="@+id/textViewTrackNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/controlFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/controlSongsFrameHeight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/songsView"
                android:layout_width="@dimen/listSongsWidth"
                android:layout_height="@dimen/listSongsHeight"
                android:layout_marginStart="@dimen/listSongsMargin"
                android:layout_marginLeft="@dimen/listSongsMargin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.362"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>