<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/itemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/itemTitle"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.805"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewActors"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/itemActors"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.794"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageViewArtwork"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/contentDescriptionImage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewActors"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?attr/selectableItemBackground" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>